--- a/views/checkout.ejs
+++ b/views/checkout.ejs
@@ -11,10 +11,12 @@
     />
     <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
     <!-- //axios -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.6.7/axios.min.js"
-        integrity="sha512-NQfB/bDaB8kaSXF8E77JjhHG5PM6XVRxvHzkZiwl3ddWCEPBa23T76MuWSwAJdMGJnmQqM0VeY9kFszsrBEFrQ=="
-        crossorigin="anonymous" referrerpolicy="no-referrer">
-        </script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.6.7/axios.min.js"
+      integrity="sha512-NQfB/bDaB8kaSXF8E77JjhHG5PM6XVRxvHzkZiwl3ddWCEPBa23T76MuWSwAJdMGJnmQqM0VeY9kFszsrBEFrQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
     <style>
       body {
         font-family: Arial, sans-serif;
@@ -71,7 +73,7 @@
           <a class="nav-link" href="/cartitems">Cart</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="/addAdsress">Address</a>
+          <a class="nav-link" href="/addAdsress">Address</a>
         </li>
       </ul>
     </nav>
@@ -98,13 +100,15 @@
               Cash on Delivery
             </button>
           </div>
-          <br>
+          <br />
           <div class="form-check">
-            <button id="rzp-button1" class="btn btn-primary">Pay with Razorpay</button>
+            <button id="rzp-button1" class="btn btn-primary">
+              Pay with Razorpay
+            </button>
           </div>
         </div>
 
-        <input type="hidden" id="paymentMethod" name="paymentMethod" value="">
+        <input type="hidden" id="paymentMethod" name="paymentMethod" value="" />
       </form>
     </div>
 
@@ -122,60 +126,65 @@
           document.getElementById("checkout-form").submit();
           alert("Successfully placed the Order");
         });
-
-      document.getElementById("rzp-button1").addEventListener("click", function () {
-        document.getElementById("paymentMethod").value = "razorpay";
-      });
     </script>
 
     <!-- RAZORPAY INTO THE PAGE -->
     <script nonce="your-unique-nonce-value">
-      axios.post('/order').then((info) => {
-        var options = {
-          "key": 'rzp_test_chl1HGz9KIP3i6',
-          "name": "RAHUL Corp",
-          "description": "RAHUL's PAY",
-          "order_id": info.data.id, // This is a sample Order ID. Pass the `id` obtained in the response of Step 1
-          "callback_url": 'is-order-complete',
-          "theme": {
-            "color": "#3399cc"
-          }
-        }
-        var rzp1 = new Razorpay(options);
+      axios
+        .post("/order")
+        .then((info) => {
+          var options = {
+            key: "rzp_test_chl1HGz9KIP3i6",
+            name: "RAHUL Corp",
+            description: "RAHUL's PAY",
+            order_id: info.data.id, // This is a sample Order ID. Pass the `id` obtained in the response of Step 1
+            callback_url: "is-order-complete",
+            theme: {
+              color: "#3399cc",
+            },
+          };
+          var rzp1 = new Razorpay(options);
 
-        rzp1.on('payment.failed', function (response) {
-          var paymentId = response.error.metadata.payment_id;
-          var orderId = response.error.metadata.order_id;
-          var errorCode = response.error.code;
-          var paymentStatus = response.error.description;
+          rzp1.on("payment.failed", function (response) {
+            var paymentId = response.error.metadata.payment_id;
+            var orderId = response.error.metadata.order_id;
+            var errorCode = response.error.code;
+            var paymentStatus = response.error.description;
 
-          axios.post('/payment-failed', {
-            paymentId: paymentId,
-            orderId: orderId,
-            errorCode: errorCode,
-            paymentStatus: paymentStatus
-          })
-          .then(function (response) {
-            console.log('Payment ID, order ID, error code, and payment status sent to the backend:', paymentId, orderId, errorCode, paymentStatus);
-          })
-          .catch(function (error) {
-            console.error('Error sending data to the backend:', error);
+            axios
+              .post("/payment-failed", {
+                paymentId: paymentId,
+                orderId: orderId,
+                errorCode: errorCode,
+                paymentStatus: paymentStatus,
+              })
+              .then(function (response) {
+                console.log(
+                  "Payment ID, order ID, error code, and payment status sent to the backend:",
+                  paymentId,
+                  orderId,
+                  errorCode,
+                  paymentStatus
+                );
+              })
+              .catch(function (error) {
+                console.error("Error sending data to the backend:", error);
+              });
           });
-        });
 
-        rzp1.on('payment.success', function (response) {
-          document.getElementById("checkout-form").submit();
-          alert("Successfully placed the Order");
-        });
+          rzp1.on("payment.success", function (response) {
+            document.getElementById("checkout-form").submit();
+            alert("Successfully placed the Order");
+          });
 
-        document.getElementById('rzp-button1').onclick = function (e) {
-          rzp1.open();
-          document.getElementById("paymentMethod").value = "razorpay";
-          e.preventDefault();
-        }
-      }).catch((error) => {
-        console.log('Error making POST request to /order:', error);
-      });
+          document.getElementById("rzp-button1").onclick = function (e) {
+            rzp1.open();
+            e.preventDefault();
+          };
+        })
+        .catch((error) => {
+          console.log("Error making POST request to /order:", error);
+        });
     </script>
   </body>
 </html>
