--- a/views/checkout.ejs
+++ b/views/checkout.ejs
@@ -101,15 +101,13 @@
             </button>
           </div>
           <br />
-          <div class="form-check">
-            <button id="rzp-button1" class="btn btn-primary">
-              Pay with Razorpay
-            </button>
-          </div>
+          <div class="form-check"></div>
         </div>
-
         <input type="hidden" id="paymentMethod" name="paymentMethod" value="" />
       </form>
+      <button id="rzp-button1" class="btn btn-primary">
+        Pay with Razorpay
+      </button>
     </div>
 
     <!-- Bootstrap JS (Optional) -->
@@ -133,24 +131,31 @@
       axios
         .post("/order")
         .then((info) => {
+          console.log("rahul");
+          console.log(info);
           var options = {
             key: "rzp_test_chl1HGz9KIP3i6",
             name: "RAHUL Corp",
-            description: "RAHUL's PAY",
-            order_id: info.data.id, // This is a sample Order ID. Pass the `id` obtained in the response of Step 1
+            description: "RAHUL;s PAY",
+            order_id: info.data.id, //This is a sample Order ID. Pass the `id` obtained in the response of Step 1
             callback_url: "is-order-complete",
             theme: {
               color: "#3399cc",
             },
           };
+          //again intiliazing the orderid in it
           var rzp1 = new Razorpay(options);
 
           rzp1.on("payment.failed", function (response) {
+            console.log("failes");
+            console.log(response);
+            // Extract the payment ID, order ID, error code, and payment status from the response
             var paymentId = response.error.metadata.payment_id;
             var orderId = response.error.metadata.order_id;
             var errorCode = response.error.code;
             var paymentStatus = response.error.description;
 
+            // Send the payment ID, order ID, error code, and payment status to the backend
             axios
               .post("/payment-failed", {
                 paymentId: paymentId,
@@ -170,11 +175,6 @@
               .catch(function (error) {
                 console.error("Error sending data to the backend:", error);
               });
-          });
-
-          rzp1.on("payment.success", function (response) {
-            document.getElementById("checkout-form").submit();
-            alert("Successfully placed the Order");
           });
 
           document.getElementById("rzp-button1").onclick = function (e) {
