--- a/views/checkout.ejs
+++ b/views/checkout.ejs
@@ -10,6 +10,7 @@
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
     />
     <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
+    <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
     <!-- //axios -->
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.6.7/axios.min.js"
@@ -105,26 +106,15 @@
         </div>
         <input type="hidden" id="paymentMethod" name="paymentMethod" value="" />
       </form>
-      <button id="rzp-button1" class="btn btn-primary">
-        Pay with Razorpay
-      </button>
     </div>
+    <button id="rzp-button1" class="btn btn-primary">Pay with Razorpay</button>
 
     <!-- Bootstrap JS (Optional) -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <!-- Razorpay JS -->
-    <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
-    <script>
-      document
-        .getElementById("cashondelivery")
-        .addEventListener("click", function () {
-          document.getElementById("paymentMethod").value = "cash";
-          document.getElementById("checkout-form").submit();
-          alert("Successfully placed the Order");
-        });
-    </script>
+   
 
     <!-- RAZORPAY INTO THE PAGE -->
     <script nonce="your-unique-nonce-value">
